# mini-sglang

./: .gitignore
0_venkat-worklog/: RUNBOOK.md  rust-minisgl-cpu-plan.md
0_venkat-worklog/baselines/: 2026-02-14-rtx3060-qwen2.5-0.5b.md  2026-02-14-shadow-parity-corpus.md  2026-02-14-tokenizer-backend-ab.md  gates.release.yaml
0_venkat-worklog/kanban/: BOARD.md  RUNBOOK.md
0_venkat-worklog/kanban/backlog/: BK-001-super-optimized-runtime-track.md  BK-002-standard-corpus-benchmark-sharegpt.md
0_venkat-worklog/kanban/baselines/: 2026-02-14-rtx3060-qwen2.5-0.5b.md  TEMPLATE.md  gates.offline.yaml  gates.online.yaml
0_venkat-worklog/kanban/done/: P0-001-baseline-harness-and-gates.md  P0-002-rust-workspace-and-ci-scaffold.md  P0-003-rust-radix-cache-equivalence.md  P0-004-rust-prefill-admission-and-batch-mapping.md  P0-005-pyo3-bindings-and-python-integration.md  P0-006-shadow-mode-and-parity-corpus.md  P1-007-rust-gateway-skeleton-axum.md  P1-008-rust-tokenizer-detokenizer-service.md  P1-009-typed-transport-migration.md  P1-010-observability-and-release-gates.md
0_venkat-worklog/research/: 2026-02-14-rust-cpu-service-cutover-design.md  2026-02-14-rust-tokenizer-landscape.md
python/minisgl/: env.py
python/minisgl/benchmark/: client.py  harness.py  metrics.py  (+4 more)
rust/: Cargo.toml  README.md
rust/minisgl-cpu-core/: Cargo.toml
rust/minisgl-cpu-core/examples/: prefill_mapping_bench.rs  radix_match_prefix_bench.rs
rust/minisgl-cpu-core/src/: cache.rs  lib.rs  prefill.rs  radix.rs  scheduler.rs  types.rs
rust/minisgl-cpu-core/tests/: prefill_admission.rs  prefill_python_trace_parity.rs  radix_cache_equivalence.rs  radix_python_trace_parity.rs  radix_stress.rs  skeleton_api.rs
rust/minisgl-cpu-core/tests/data/: prefill_golden_trace.yaml  radix_golden_trace.yaml
rust/minisgl-cpu-gateway/: Cargo.toml
rust/minisgl-cpu-gateway/src/: main.rs
rust/minisgl-cpu-py/: Cargo.toml  README.md  pyproject.toml
rust/minisgl-cpu-py/src/: lib.rs
rust/minisgl-cpu-py/src/minisgl_cpu/: __init__.py
rust/minisgl-cpu-py/tests/: test_import.py
rust/minisgl-cpu-tokenizer/: Cargo.toml
rust/minisgl-cpu-tokenizer/src/: lib.rs
rust/scripts/: bench_python_radix.py  ci_check.sh  export_prefill_trace.py  export_radix_trace.py
tests/misc/: test_benchmark_metrics.py  test_cpu_backend.py  test_cpu_backend_shadow.py  test_release_gate.py  test_runtime_metrics.py  test_shadow_report.py  test_token_parity.py  test_tokenizer_rust_backend.py  test_transport_stats.py  test_typed_transport.py
(+33 files in other folders)
