[workspace]
members = [
  "minisgl-cpu-core",
  "minisgl-cpu-py",
  "minisgl-cpu-gateway",
  "minisgl-cpu-tokenizer",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py312"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros", "signal"] }
axum = { version = "0.8.6", features = ["macros", "json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
openai-protocol = { version = "~1.0.0", features = ["axum"] }
