[package]
name = "minisgl-cpu-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "minisgl-cpu-gateway"
path = "src/main.rs"

[dependencies]
axum.workspace = true
openai-protocol.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
