[package]
name = "minisgl-cpu-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "minisgl-cpu-gateway"
path = "src/main.rs"

[dependencies]
axum.workspace = true
openai-protocol.workspace = true
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
