[package]
name = "minisgl-cpu-tokenizer"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "minisgl_cpu_tokenizer"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
llm-tokenizer = "1.1.0"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
